--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
-    "react-grid-carousel": "^1.0.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "web-vitals": "^2.1.4"
