--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-reveal": "^1.2.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.2",
     "react-router-hash-link": "^2.4.3",
